--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         
         /* Hero Section - Using placeholder image for now */
         .hero {
-            background-image: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.65)), url('https://placehold.co/1200x600/2c3e50/ffffff?text=Industrial+Warehouse');
+  background-image: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.65)),
+  url('hero.jpg.jpg');
+}
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -588,7 +590,7 @@
     <header>
         <div class="container header-container">
       <div class="logo">
-    <img src="https://placehold.co/150x50/1a5276/ffffff?text=Bhoodevi" alt="Bhoodevi Warehouse Logo" class="logo-img">
+    <img src="logo.jpg.jpg" alt="Bhoodevi Warehouse Logo" class="logo-jpg.jpg">
     <h1>Bhoodevi <span>Warehouse</span></h1>
       </div>
             <nav>
